$Id: CHANGES,v 1.200 2002/11/19 13:39:35 stelian Exp $

Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
=======================================================================

1.	Added a note in the restore man page clarifying the question
	'set the permissions on the current directory ?' asked by
	restore at the end of treatment in -i and -x modes.

Changes between versions 0.4b31 and 0.4b32 (released November 15, 2002)
=======================================================================

1.	Changed dump to use fcntl(F_SETLK) style locking instead
	of flock() when locking the dumpdates file. With the old 
	locking scheme, a local user having read rights on the 
	dumpdates file could be able to do a Denial of Service attack
	on dump. In order to lock the dumpdates file with the new
	scheme, the user would need to have write access on the file.
	Thanks to Richard Johnson <Richard.Johnson3@ey.com> for 
	reporting the bug (originally a bugtraq post).

2.	Fixed interactive 'ls' which caused spurious errors warnings
	about 'undefined filetypes' detected. Thanks to Jorgen Ostling 
	<jorgen_ostling@users.sourceforge.net> for reporting this 
	bug.

3.	Fixed dump's estimate when dealing with sparse inodes.

4.	Modified dump to allow setting a blocksize bigger than 32kB
	(raised the limit to 1024kB), because newer hardware needs
	this for proper operation. Thanks to Dirk Traenapp
	<dtraenapp@users.sourceforge.net> for reporting this.

5.	Fixed a bug causing Dump to stop and report an error if an
	inode number in the exclude file was followed by some amount
	of whitespace. Thanks to Jeffrey Sofferin 
	<sofferin@users.sourceforge.net> for reporting this bug.

6.	Fixed a bug which caused restore, in some particular cases,
	to ask some 'scary' questions and leave a bunch of RSTTMP
	directories behind when restoring incremental tapes. Thanks
	to Philippe Troin <phil@fifi.org> for reporting this bug and
	providing the test cases.
