@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.200 2002/11/19 13:39:35 stelian Exp $
+$Id: CHANGES,v 1.201 2002/11/28 08:54:00 stelian Exp $
 
 Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
 =======================================================================
@@ -6,6 +6,10 @@ Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
 1.	Added a note in the restore man page clarifying the question
 	'set the permissions on the current directory ?' asked by
 	restore at the end of treatment in -i and -x modes.
+
+2.	Fixed the endianess issues when reading compressed tapes.
+	Thanks to Dark Force <daq4th@users.sourceforge.net> for
+	reporting this bug and providing test cases.
 
 Changes between versions 0.4b31 and 0.4b32 (released November 15, 2002)
 =======================================================================
